--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/nunito-sans": "^4.5.1",
+    "autoprefixer": "^10.4.0",
+    "axios": "^0.24.0",
     "next": "12.0.7",
+    "postcss": "^8.4.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "tailwindcss": "^3.0.7"
   },
   "devDependencies": {
     "@types/node": "17.0.0",
