--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@fontsource/nunito-sans": "^4.5.1",
+    "@types/numeral": "^2.0.2",
     "autoprefixer": "^10.4.0",
     "axios": "^0.24.0",
     "next": "12.0.7",
+    "next-themes": "^0.0.15",
+    "numeral": "^2.0.6",
     "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
